Fix for makeExample styling without linenumbers losing scrollbar + default handling of makeExamples with only one line closes #427

--- a/public/resources/css/module/_code.scss
+++ b/public/resources/css/module/_code.scss
@@ -26,7 +26,8 @@
   background: $steel;
   font-family: $mono-font;
   color: $snow;
-  overflow: hidden;
+  width: auto;
+  overflow: auto;
   position: relative;
   padding: 0px;
   font-size: 15px;
